--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+html {
+	scroll-behavior: smooth;
+	scroll-padding-top: 100px;
+	font-family: "Rowdies", sans-serif;
+}
+
+.section-container {
+	@apply px-4 sm:px-6 lg:px-8 py-16 container mx-auto;
+}
